force-app/main/default/objects/Invoice__c/fields/Invoice_Gross_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Gross_Total__c</fullName>
    <label>Invoice Gross Total</label>
    <summarizedField>Invoice_Line_Item__c.Gross_Line_Total__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>