force-app/main/default/objects/Invoice__c/fields/Invoice_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Net_Total__c</fullName>
    <description>Net Total amount of the invoice</description>
    <label>Invoice Net Total</label>
    <summarizedField>Invoice_Line_Item__c.Net_Line_Total__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>