force-app/main/default/objects/Invoice__c/listViews/All_Invoices_Service.listView-meta.xml
<ListView>
    <fullName>All_Invoices_Service</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Invoice_Gross_Total__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>All Invoices - Service</label>
</ListView>